feat: implement and integrate practice sub-pages for Days 3-8

--- a/classroom.html
+++ b/classroom.html
@@ -331,11 +331,17 @@
                                 </div>
                                 <ul class="space-y-3 text-gray-700">
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-laptop-code text-emerald-600 mt-1"></i>임원 보고용 프레젠테이션 제작</li>
+                                            class="fas fa-laptop-code text-emerald-600 mt-1"></i><a
+                                            href="day03_practice_slides.html" class="hover:underline">임원 보고용 프레젠테이션
+                                            제작</a></li>
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-laptop-code text-emerald-600 mt-1"></i>브랜드 마케팅 이미지 생성</li>
+                                            class="fas fa-laptop-code text-emerald-600 mt-1"></i><a
+                                            href="day03_practice_branding.html" class="hover:underline">브랜드 마케팅 이미지
+                                            생성</a></li>
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-laptop-code text-emerald-600 mt-1"></i>SNS 콘텐츠 비주얼 패키지</li>
+                                            class="fas fa-laptop-code text-emerald-600 mt-1"></i><a
+                                            href="day03_practice_sns.html" class="hover:underline">SNS 콘텐츠 비주얼 패키지</a>
+                                    </li>
                                 </ul>
                             </div>
                         </div>
@@ -404,11 +410,17 @@
                                 </div>
                                 <ul class="space-y-3 text-gray-700">
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-laptop-code text-emerald-600 mt-1"></i>제품 소개 영상 클립 제작</li>
+                                            class="fas fa-laptop-code text-emerald-600 mt-1"></i><a
+                                            href="day04_practice_video.html" class="hover:underline">제품 소개 영상 클립 제작</a>
+                                    </li>
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-laptop-code text-emerald-600 mt-1"></i>나레이션 음성 생성하기</li>
+                                            class="fas fa-laptop-code text-emerald-600 mt-1"></i><a
+                                            href="day04_practice_voice.html" class="hover:underline">나레이션 음성 생성하기</a>
+                                    </li>
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-laptop-code text-emerald-600 mt-1"></i>이미지 → 영상 변환 실습</li>
+                                            class="fas fa-laptop-code text-emerald-600 mt-1"></i><a
+                                            href="day04_practice_convert.html" class="hover:underline">이미지 → 영상 변환
+                                            실습</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -477,12 +489,14 @@
                                 </div>
                                 <ul class="space-y-3 text-gray-700">
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-laptop-code text-emerald-600 mt-1"></i>이메일 → Slack 알림 자동화</li>
+                                            class="fas fa-laptop-code text-emerald-600 mt-1"></i><a
+                                            href="day05_practice_email.html" class="hover:underline">이메일 자동 분류</a></li>
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-laptop-code text-emerald-600 mt-1"></i>폼 응답 → 스프레드시트 자동 기록
-                                    </li>
+                                            class="fas fa-laptop-code text-emerald-600 mt-1"></i><a
+                                            href="day05_practice_news.html" class="hover:underline">뉴스 클리핑 자동화</a></li>
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-laptop-code text-emerald-600 mt-1"></i>AI + 자동화 통합 워크플로우 구축
+                                            class="fas fa-laptop-code text-emerald-600 mt-1"></i><a
+                                            href="day05_practice_customer.html" class="hover:underline">고객 문의 자동 응답</a>
                                     </li>
                                 </ul>
                             </div>
@@ -552,12 +566,18 @@
                                 </div>
                                 <ul class="space-y-3 text-gray-700">
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-laptop-code text-emerald-600 mt-1"></i>Cursor 기본 기능 실습</li>
+                                            class="fas fa-laptop-code text-emerald-600 mt-1"></i><a
+                                            href="day06_practice_cursor.html" class="hover:underline">Cursor 기본 기능
+                                            실습</a></li>
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-laptop-code text-emerald-600 mt-1"></i>간단한 HTML/CSS 페이지 생성
+                                            class="fas fa-laptop-code text-emerald-600 mt-1"></i><a
+                                            href="day06_practice_html.html" class="hover:underline">간단한 HTML/CSS 페이지
+                                            생성</a>
                                     </li>
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-laptop-code text-emerald-600 mt-1"></i>AI와 대화하며 코드 수정하기</li>
+                                            class="fas fa-laptop-code text-emerald-600 mt-1"></i><a
+                                            href="day06_practice_python.html" class="hover:underline">파이썬 데이터 분석
+                                            스크립트</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -626,11 +646,16 @@
                                 </div>
                                 <ul class="space-y-3 text-gray-700">
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-laptop-code text-emerald-600 mt-1"></i>To-Do 리스트 앱 개발</li>
+                                            class="fas fa-laptop-code text-emerald-600 mt-1"></i><a
+                                            href="day07_practice_todo.html" class="hover:underline">To-Do 리스트 앱 개발</a>
+                                    </li>
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-laptop-code text-emerald-600 mt-1"></i>AI API 연동 챗봇 구현</li>
+                                            class="fas fa-laptop-code text-emerald-600 mt-1"></i><a
+                                            href="day07_practice_chatbot_app.html" class="hover:underline">AI API 연동 챗봇
+                                            구현</a></li>
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-laptop-code text-emerald-600 mt-1"></i>반응형 UI 디자인 적용</li>
+                                            class="fas fa-laptop-code text-emerald-600 mt-1"></i><a
+                                            href="day07_practice_ui.html" class="hover:underline">반응형 UI 디자인 적용</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -699,11 +724,17 @@
                                 </div>
                                 <ul class="space-y-3 text-gray-700">
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-laptop-code text-emerald-600 mt-1"></i>개인 프로젝트 완성 및 코드 리뷰</li>
+                                            class="fas fa-laptop-code text-emerald-600 mt-1"></i><a
+                                            href="day08_practice_project.html" class="hover:underline">개인 프로젝트 완성 및 코드
+                                            리뷰</a></li>
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-laptop-code text-emerald-600 mt-1"></i>Vercel로 앱 배포하기</li>
+                                            class="fas fa-laptop-code text-emerald-600 mt-1"></i><a
+                                            href="day08_practice_deploy.html" class="hover:underline">Vercel로 앱 배포하기</a>
+                                    </li>
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-laptop-code text-emerald-600 mt-1"></i>프로젝트 발표 & 수료식</li>
+                                            class="fas fa-laptop-code text-emerald-600 mt-1"></i><a
+                                            href="day08_practice_final.html" class="hover:underline">프로젝트 발표 & 수료식</a>
+                                    </li>
                                 </ul>
                             </div>
                         </div>
