--- a/day03_lecture.html
+++ b/day03_lecture.html
@@ -170,7 +170,7 @@
                         <h3 class="text-xl font-bold mb-2">상세페이지 기획안</h3>
                         <p class="text-slate-500 text-sm mb-6 flex-1">시선을 사로잡는 제품 상세페이지의 구조를 기획하고 AI로 카피와 이미지를 생성합니다.
                         </p>
-                        <a href="#"
+                        <a href="day03_practice_detail.html"
                             class="w-full py-3 bg-slate-50 text-slate-700 font-bold rounded-xl hover:bg-fuchsia-600 hover:text-white transition-colors text-center">실습
                             시작하기</a>
                     </div>
@@ -185,7 +185,7 @@
                         </div>
                         <h3 class="text-xl font-bold mb-2">로고 & 브랜딩 디자인</h3>
                         <p class="text-slate-500 text-sm mb-6 flex-1">브랜드 정체성을 담은 로고와 컬러 팔레트, 폰트 가이드를 만듭니다.</p>
-                        <a href="#"
+                        <a href="day03_practice_branding.html"
                             class="w-full py-3 bg-slate-50 text-slate-700 font-bold rounded-xl hover:bg-fuchsia-600 hover:text-white transition-colors text-center">실습
                             시작하기</a>
                     </div>
@@ -200,7 +200,7 @@
                         </div>
                         <h3 class="text-xl font-bold mb-2">SNS 카드뉴스 제작</h3>
                         <p class="text-slate-500 text-sm mb-6 flex-1">인스타그램, 블로그 등에 업로드할 정보성 카드뉴스를 효율적으로 제작합니다.</p>
-                        <a href="#"
+                        <a href="day03_practice_cardnews.html"
                             class="w-full py-3 bg-slate-50 text-slate-700 font-bold rounded-xl hover:bg-fuchsia-600 hover:text-white transition-colors text-center">실습
                             시작하기</a>
                     </div>
@@ -221,14 +221,14 @@
 </body>
 
 </html>
-    <script type="module">
-        import { auth } from './js/firebase-config.js';
-        import { onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+<script type="module">
+    import { auth } from './js/firebase-config.js';
+    import { onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
 
-        onAuthStateChanged(auth, (user) => {
-            if (!user) {
-                alert("회원 전용 강의입니다. 로그인 후 이용해주세요.");
-                window.location.href = 'index.html';
-            }
-        });
-    </script>
+    onAuthStateChanged(auth, (user) => {
+        if (!user) {
+            alert("회원 전용 강의입니다. 로그인 후 이용해주세요.");
+            window.location.href = 'index.html';
+        }
+    });
+</script>
