--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@
                     class="px-8 py-3 bg-white text-indigo-600 rounded-full font-bold hover:bg-indigo-50 transition-colors shadow-lg shadow-indigo-500/30">
                     교육 신청
                 </button>
+                <a href="curriculum.html"
+                    class="px-8 py-3 bg-indigo-600/20 backdrop-blur-md border border-white/30 text-white rounded-full font-bold hover:bg-white/20 transition-all shadow-lg flex items-center gap-2">
+                    <i class="fas fa-list-ul"></i> 커리큘럼 보기
+                </a>
                 <button id="enterBtn" onclick="window.location.href='classroom.html'"
                     class="hidden px-8 py-3 bg-emerald-500 text-white border border-emerald-400 rounded-full font-bold hover:bg-emerald-600 transition-colors shadow-lg flex items-center gap-2 animate-pulse">
                     <i class="fas fa-chalkboard-teacher"></i> 강의실 입장
@@ -563,6 +567,14 @@
                 document.body.style.overflow = '';
             }
         };
+
+        // Auto-open login modal if ?apply=true is in URL
+        window.addEventListener('load', () => {
+            const urlParams = new URLSearchParams(window.location.search);
+            if (urlParams.get('apply') === 'true') {
+                setTimeout(() => window.openLoginModal(), 500);
+            }
+        });
     </script>
 </body>
 
