--- a/index.html
+++ b/index.html
@@ -97,6 +97,10 @@
                     class="px-8 py-3 bg-indigo-600/20 backdrop-blur-md border border-white/30 text-white rounded-full font-bold hover:bg-white/20 transition-all shadow-lg flex items-center gap-2">
                     <i class="fas fa-list-ul"></i> 커리큘럼 보기
                 </a>
+                <button id="courseIntroBtn" onclick="window.openCourseIntroPdf()"
+                    class="hidden px-8 py-3 bg-red-600/20 backdrop-blur-md border border-white/30 text-white rounded-full font-bold hover:bg-white/20 transition-all shadow-lg flex items-center gap-2">
+                    <i class="fas fa-file-pdf"></i> 과정 소개(PDF)
+                </button>
                 <button id="enterBtn" onclick="window.location.href='classroom.html'"
                     class="hidden px-8 py-3 bg-emerald-500 text-white border border-emerald-400 rounded-full font-bold hover:bg-emerald-600 transition-colors shadow-lg flex items-center gap-2 animate-pulse">
                     <i class="fas fa-chalkboard-teacher"></i> 강의실 입장
@@ -391,7 +395,7 @@
     <!-- Script: Authentication & Dynamic UI -->
     <script type="module">
         import { db, auth } from './js/firebase-config.js';
-        import { collection, getDocs, query, orderBy } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+        import { collection, getDocs, query, orderBy, doc, getDoc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
         import { onAuthStateChanged, signInWithEmailAndPassword, signOut, GoogleAuthProvider, signInWithPopup } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
 
         // ==========================================
@@ -574,7 +578,39 @@
             if (urlParams.get('apply') === 'true') {
                 setTimeout(() => window.openLoginModal(), 500);
             }
+
+            // Load course intro PDF status
+            loadCourseIntroPdf();
         });
+
+        // ==========================================
+        // Course Intro PDF Logic
+        // ==========================================
+        let courseIntroPdfUrl = null;
+
+        async function loadCourseIntroPdf() {
+            try {
+                const courseIntroDoc = await getDoc(doc(db, "resources", "courseIntro"));
+
+                if (courseIntroDoc.exists() && courseIntroDoc.data().url) {
+                    courseIntroPdfUrl = courseIntroDoc.data().url;
+                    const btn = document.getElementById('courseIntroBtn');
+                    if (btn) {
+                        btn.classList.remove('hidden');
+                    }
+                }
+            } catch (error) {
+                console.log("Course intro PDF not available:", error);
+            }
+        }
+
+        window.openCourseIntroPdf = () => {
+            if (courseIntroPdfUrl) {
+                window.open(courseIntroPdfUrl, '_blank');
+            } else {
+                alert('과정 소개 PDF가 아직 업로드되지 않았습니다.');
+            }
+        };
     </script>
 </body>
 
